--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-range": "^1.8.14",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-use": "^17.4.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
