--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.2.0",
     "react-range": "^1.8.14",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
